home and blog page updated

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         <h2 class="session-title">Meet the Founders</h2>
 
         <article class="founder-pics">
-          <img src="image/staff/.jpg" alt="" />
+          <img src="image/staff/anny.jpeg" alt="" />
           <div>
             <h3 class="session-subtitle">Anny</h3>
             <p class="regular-text">
@@ -71,7 +71,7 @@
         </article>
 
         <article class="founder-pics">
-          <img src="" alt="" />
+          <img src="image/staff/maho.jpg" alt="" />
           <div>
             <h3 class="session-subtitle">Maho</h3>
             <p class="regular-text">
@@ -94,7 +94,7 @@
         </article>
 
         <article class="founder-pics">
-          <img src="" alt="" />
+          <img src="image/staff/alicia.jpg" alt="" />
           <div>
             <h3 class="session-subtitle">Alicia</h3>
             <p class="regular-text">
