--- a/blog.html
+++ b/blog.html
@@ -81,11 +81,11 @@
               Discover the flavors of the season with our exclusive Seasonal Treat Box, available for pickup 
               only! Enjoy a 20% discount on a box filled with a selection of our seasonal treats.
             </p>
-            <p><strong>The box includes:</strong></p>
+            <p>The box includes:</p>
             <ul>
               <li>Strawberry Cupcakes</li>
               <li>Arabian Baklava Rings (containing walnuts and pistachios)</li>
-              <li>Flutter Nutter Cookies (containing peanut butter)</li>
+              <li>Fluffernutter Chocolate Chip Cookies (containing peanut butter)</li>
               <li>Blueberry Cheesecake Cups</li>
             </ul>
             <p>
@@ -100,7 +100,55 @@
       </section>
 
       <section>
-        <!-- RECIPE WITH VIDEO -->
+        <article>
+          <h2>Banana Bread</h2>
+          <p class="date">July 30, 2024 </p>
+          <img src="" alt="">
+
+          <div>
+            <h3>Ingredients:</h3>
+            <ul>
+              <li>3 overripe medium bananas, mashed</li>
+              <li>1/2 cup unsalted butter, melted</li>
+              <li>3/4 cup granulated sugar</li>
+              <li>1/4 cup brown sugar</li>
+              <li>2 eggs, room temperature</li>
+              <li>1 teaspoon vanilla extract</li>
+              <li>1/2 cup greek yogurt</li>
+              <li>3/4 teaspoon baking soda</li>
+              <li>1 teaspoon salt</li>
+              <li>1 1/4 cups all purpose flour</li>
+              <li>2/3 cup chocolate chips or mixed nuts, roughly chopped</li>
+            </ul>
+
+            <h3>Instructions:</h3>
+            <ol>
+              <li>
+                Preheat oven to 350ºF. Grease a 9 x 5 inch loaf pan and set aside.
+              </li>
+              <li>
+                In a large bowl, whisk together mashed bananas with the melted butter, stirring 
+                to combine. Add the brown sugar and white sugar. Whisk to combine. Add the 
+                greek yogurt, eggs, and vanilla extract and whisk until fully combined.
+              </li>
+              <li>
+                In a separate bowl, combine the flour, baking soda, and salt. Fold the dry 
+                ingredients into the wet. Do not over mix! Fold the chocolate chips/nuts in last, 
+                folding a few times until just combined.
+              </li>
+              <li>
+                Bake for 50 minutes, or until a knife inserted in the center comes out clean. 
+                Allow to cool for 15 minutes before removing from loaf pan and serving!
+              </li>
+            </ol>
+
+            <h4>Notes:</h4>
+            <p>
+              If the top of the bread is browning too fast, cover the bread with tinfoil and place back in the 
+              oven to finish baking
+            </p>
+          </div>
+        </article>
       </section>
     </main>
   </body>
