--- a/index.html
+++ b/index.html
@@ -91,12 +91,13 @@
               src="image/home/cake/triplechocolate.jpeg"
               alt=""
             />
-            <h3>Chocolate Cake</h3>
+            <h3>Chocolate Lovers</h3>
             <p class="regular-text">
-              Rich and moist chocolate sponge cake layered with creamy chocolate
-              frosting
+              The ultimate treat for chocolate lovers! This cake features
+              a triple chocolate ombre buttercream base, adorned with 
+              chocolate fixings.
             </p>
-            <p class="regular-text">$40</p>
+            <p class="regular-text">$150</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -120,15 +121,17 @@
           </div>
           <div class="menu-item" data-name="Cheesecake" data-price="30">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
+              src="image/home/cake/sky.jpeg"
               alt=""
             />
-            <h3>Cheesecake</h3>
+            <h3>Signature Drip</h3>
             <p class="regular-text">
-              A creamy and dense dessert with a graham cracker crust, often
-              topped with fruit or chocolate
+              Featuring a classic design with a stylish drip effect that 
+              enhances your chosen flavor, these cakes provide a sophisticated 
+              way to celebrate. They can be customized with various colors to 
+              suit your preferences.
             </p>
-            <p class="regular-text">$30</p>
+            <p class="regular-text">$90</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -152,15 +155,16 @@
           </div>
           <div class="menu-item" data-name="Tiramisu" data-price="50">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
+              src="image/home/cake/floral.JPG"
               alt=""
             />
-            <h3>Tiramisu</h3>
+            <h3>Floral Buttercream</h3>
             <p class="regular-text">
-              An Italian dessert made of layers of coffee-soaked ladyfingers,
-              mascarpone cheese, and cocoa powder
+              Adorned with a sophisticated floral design, featuring buttercream flowers 
+              crafted with a palette knife or piping. These delicate blooms add a touch 
+              of refinement to any celebration.
             </p>
-            <p class="regular-text">$50</p>
+            <p class="regular-text">$180</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -184,15 +188,15 @@
           </div>
           <div class="menu-item" data-name="Macarons" data-price="25">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
+              src="image/home/cake/cookiemonster.jpg"
               alt=""
             />
-            <h3>Macarons</h3>
+            <h3>Cookie Monster</h3>
             <p class="regular-text">
-              Delicate French meringue-based cookies with a creamy filling,
-              available in various flavors.
+              A moist chocolate cake filled with creamy chocolate chip cookie buttercream 
+              and topped with rich oreo frosting. A must-try for cookie lovers!
             </p>
-            <p class="regular-text">$25</p>
+            <p class="regular-text">$150</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -222,15 +226,14 @@
         <div class="menu-items">
           <div class="menu-item" data-name="Chocolate Cake" data-price="40">
             <img
-              src="image/home/cake/triplechocolate.jpeg"
-              alt=""
+              src="image/home/cheesecake/classic.JPG" alt=""
             />
-            <h3>Chocolate Cake</h3>
+            <h3>Vanilla</h3>
             <p class="regular-text">
-              Rich and moist chocolate sponge cake layered with creamy chocolate
-              frosting
+              A classic cheesecake enriched with the aromatic essence of 
+              fresh vanilla beans.
             </p>
-            <p class="regular-text">$40</p>
+            <p class="regular-text">$75</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -254,15 +257,15 @@
           </div>
           <div class="menu-item" data-name="Cheesecake" data-price="30">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
+              src="image/home/cheesecake/pistachio.jpg"
               alt=""
             />
-            <h3>Cheesecake</h3>
+            <h3>Pistachio</h3>
             <p class="regular-text">
-              A creamy and dense dessert with a graham cracker crust, often
-              topped with fruit or chocolate
+              A decadent cheesecake with a rich, pistachio-infused 
+              filling, topped with a velvety pistachio ganache.
             </p>
-            <p class="regular-text">$30</p>
+            <p class="regular-text">$85</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -286,15 +289,14 @@
           </div>
           <div class="menu-item" data-name="Tiramisu" data-price="50">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
-              alt=""
+              src="image/home/cheesecake/blueberry.jpg" alt=""
             />
-            <h3>Tiramisu</h3>
+            <h3>Blueberry</h3>
             <p class="regular-text">
-              An Italian dessert made of layers of coffee-soaked ladyfingers,
-              mascarpone cheese, and cocoa powder
+              Rich and creamy cheesecake infused with white chocolate 
+              and swirled with sweet blueberry sauce.
             </p>
-            <p class="regular-text">$50</p>
+            <p class="regular-text">$85</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -318,15 +320,14 @@
           </div>
           <div class="menu-item" data-name="Macarons" data-price="25">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
-              alt=""
+              src="image/home/cheesecake/strawberry.jpg" alt=""
             />
-            <h3>Macarons</h3>
+            <h3>Strawberry</h3>
             <p class="regular-text">
-              Delicate French meringue-based cookies with a creamy filling,
-              available in various flavors.
+              A vibrant cheesecake featuring the fresh, natural flavor of 
+              ripe strawberries blended into the creamy filling.
             </p>
-            <p class="regular-text">$25</p>
+            <p class="regular-text">$85</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -355,15 +356,14 @@
         <div class="menu-items">
           <div class="menu-item" data-name="Chocolate Cake" data-price="40">
             <img
-              src="image/home/cake/triplechocolate.jpeg"
-              alt=""
+              src="image/home/cupcakes/chocolate.JPG" alt=""
             />
-            <h3>Chocolate Cake</h3>
+            <h3>Chocolate Delight</h3>
             <p class="regular-text">
-              Rich and moist chocolate sponge cake layered with creamy chocolate
-              frosting
+              Rich chocolate cupcakes with chocolate buttercream and chocolate 
+              shavings,sold by the dozen.
             </p>
-            <p class="regular-text">$40</p>
+            <p class="regular-text">$44</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -387,15 +387,14 @@
           </div>
           <div class="menu-item" data-name="Cheesecake" data-price="30">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
-              alt=""
+              src="image/home/cupcakes/coconut.JPG" alt=""
             />
-            <h3>Cheesecake</h3>
+            <h3>Coco Loco</h3>
             <p class="regular-text">
-              A creamy and dense dessert with a graham cracker crust, often
-              topped with fruit or chocolate
+              Vanilla cupcakes with coconut cream cheese buttercream and 
+              toasted coconut shavings, sold by the dozen.
             </p>
-            <p class="regular-text">$30</p>
+            <p class="regular-text">$44</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -419,13 +418,12 @@
           </div>
           <div class="menu-item" data-name="Tiramisu" data-price="50">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
-              alt=""
+              src="image/home/cupcakes/strawberry.jpg" alt=""
             />
-            <h3>Tiramisu</h3>
+            <h3>Strawberry</h3>
             <p class="regular-text">
-              An Italian dessert made of layers of coffee-soaked ladyfingers,
-              mascarpone cheese, and cocoa powder
+              Strawberry cupcakes filled with fresh strawberries and topped 
+              with pink strawberry frosting, sold by the dozen.
             </p>
             <p class="regular-text">$50</p>
             <div class="menu-item-cart">
@@ -451,15 +449,14 @@
           </div>
           <div class="menu-item" data-name="Macarons" data-price="25">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
-              alt=""
+              src="image/home/cupcakes/floral.jpeg" alt=""
             />
-            <h3>Macarons</h3>
+            <h3>Floral Charm</h3>
             <p class="regular-text">
-              Delicate French meringue-based cookies with a creamy filling,
-              available in various flavors.
+              Vanilla cupcakes elegantly decorated with a buttercream floral 
+              design, adding a touch of sophistication. Sold by the dozen.
             </p>
-            <p class="regular-text">$25</p>
+            <p class="regular-text">$57</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -488,15 +485,14 @@
         <div class="menu-items">
           <div class="menu-item" data-name="Chocolate Cake" data-price="40">
             <img
-              src="image/home/cake/triplechocolate.jpeg"
-              alt=""
+              src="image/home/others/baklava.jpg" alt=""
             />
-            <h3>Chocolate Cake</h3>
+            <h3>Arabian Baklava Rings</h3>
             <p class="regular-text">
-              Rich and moist chocolate sponge cake layered with creamy chocolate
-              frosting
+              A delicate ring of flaky dough surrounding ground 
+              pistachios. Crispy, sweet, and buttery.
             </p>
-            <p class="regular-text">$40</p>
+            <p class="regular-text">$15</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -520,15 +516,14 @@
           </div>
           <div class="menu-item" data-name="Cheesecake" data-price="30">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
-              alt=""
+              src="image/home/others/biscoff.JPG" alt=""
             />
-            <h3>Cheesecake</h3>
+            <h3>Biscoff Chocolate Chip Cookies</h3>
             <p class="regular-text">
-              A creamy and dense dessert with a graham cracker crust, often
-              topped with fruit or chocolate
+              Soft brown butter cookie butter cookies, loaded with 
+              biscoff and pools of melty chocolate. 
             </p>
-            <p class="regular-text">$30</p>
+            <p class="regular-text">$5.75</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -552,15 +547,14 @@
           </div>
           <div class="menu-item" data-name="Tiramisu" data-price="50">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
-              alt=""
+              src="image/home/others/flutter nutter.jpg" alt=""
             />
-            <h3>Tiramisu</h3>
+            <h3>Fluffernutter Chocolate Chip Cookies</h3>
             <p class="regular-text">
-              An Italian dessert made of layers of coffee-soaked ladyfingers,
-              mascarpone cheese, and cocoa powder
+              Soft fluffernutter brown butter peanut butter cookies, loaded 
+              with melty pools of chocolate and marshmallow fluff. 
             </p>
-            <p class="regular-text">$50</p>
+            <p class="regular-text">$5.75</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
@@ -584,15 +578,16 @@
           </div>
           <div class="menu-item" data-name="Macarons" data-price="25">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
-              alt=""
+              src="image/home/others/tiramisu.JPG" alt=""
             />
-            <h3>Macarons</h3>
+            <h3>Tiramisu</h3>
             <p class="regular-text">
-              Delicate French meringue-based cookies with a creamy filling,
-              available in various flavors.
+              A classic Italian dessert featuring ladyfingers soaked in 
+              coffee, layered with a rich, whipped mixture of eggs, sugar, 
+              and mascarpone cheese, and dusted with cocoa. All beautifully 
+              arranged in an 8" round tray. 
             </p>
-            <p class="regular-text">$25</p>
+            <p class="regular-text">$70</p>
             <div class="menu-item-cart">
               <form>
                 <label for="amount" class="regular-text">Amount:</label>
